# mole

./: .gitignore  README.md
app/: .env.example  package-lock.json  package.json
app/aleo-addon/: Cargo.toml  README.md  package-lock.json  package.json
app/aleo-addon/src/: lib.rs
app/src/: app.js  routes.js  server.js
app/src/api/aleo/: aleo.service.js  index.js
app/src/api/health-check/: index.js
app/src/config/: index.js
app/src/lib/: db.js  helper.js
app/src/models/: blocks.js  provers.js
app/src/services/: blocks.js  provers.js
